--- a/irctest/dashboard/style.css
+++ b/irctest/dashboard/style.css
@@ -4,18 +4,21 @@
         color: rgba(255, 255, 255, 0.87);
     }
     a {
-        filter: invert(0.85) hue-rotate(180deg);
+        filter: invert(0.85) hue.job-name(180deg);
     }
 }
 
+/* Only 1px solid border between cells */
 table.test-matrix {
     border-spacing: 0;
+    border-collapse: collapse;
 }
-
 table.test-matrix td {
     text-align: center;
+    border: 1px solid grey;
 }
 
+/* Test matrix colors */
 table.test-matrix .deselected {
     background-color: grey;
 }
@@ -27,4 +30,20 @@ table.test-matrix .skipped {
 }
 table.test-matrix .failure {
     background-color: red;
+}
+
+/* Rotate headers, thanks to https://css-tricks.com/rotated-table-column-headers/ */
+th.job-name {
+  height: 140px;
+  white-space: nowrap;
+}
+th.job-name > div {
+  transform:
+    translate(28px, 50px)
+    rotate(315deg);
+  width: 40px;
+}
+th.job-name > div > span {
+  border-bottom: 1px solid grey;
+  padding-left: 0px;
 }
