--- a/irctest/dashboard/style.css
+++ b/irctest/dashboard/style.css
@@ -18,6 +18,17 @@ table.test-matrix td {
     border: 1px solid grey;
 }
 
+/* Make link take the whole cell */
+table.test-matrix td a {
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    color: black;
+    text-decoration: none;
+}
+
 /* Test matrix colors */
 table.test-matrix .deselected {
     background-color: grey;
