Use xfail instead of deselection for known failures
xfail is designed for this; and it allows selecting tests more precisely.
Additionally, this allows the dashboard to show these tests are actual failures,
along with a message to explain them.

--- a/irctest/dashboard/style.css
+++ b/irctest/dashboard/style.css
@@ -46,6 +46,9 @@ table.test-matrix .skipped {
 table.test-matrix .failure {
     background-color: red;
 }
+table.test-matrix .expected-failure {
+    background-color: orange;
+}
 
 /* Rotate headers, thanks to https://css-tricks.com/rotated-table-column-headers/ */
 th.job-name {
